--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.5",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
