--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.5",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "hbs": "^4.2.0",
+    "mongoose": "^8.16.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
